--- a/content.html
+++ b/content.html
@@ -33,7 +33,7 @@
 				<div class="md-dp-2-front md-dp-6-rised-front">
 					<div class="md-dp-2-top md-dp-6-rised-top">
 						<div class="mdl-card">
-  						<div class="mdl-card__title1">
+  						<div class="mdl-card__title">
 								<img src="img/infiniteZB.png" />
     						<h2 class="mdl-card__title-text">Welcome</h2>
   						</div>
