--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 							<ul class="nav navbar-nav">
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="index.html" target="mainFrame">首页</a></li>
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="content.html" target="mainFrame">项目一览</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">新闻资讯</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">文件分享</a></li>
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">关于我们</a></li>
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">联系我们</a></li>
 							</ul>
@@ -66,6 +68,8 @@
     		<nav class="mdl-navigation">
       		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="index.html" target="mainFrame">首页</a>
       		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="content.html" target="mainFrame">项目一览</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">新闻资讯</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">文件分享</a>
       		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">关于我们</a>
       		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">联系我们</a>
     		</nav>
