--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 					<div class="mdl-layout-spacer"></div>
 					<nav class="navbar navbar-default">
 							<ul class="nav navbar-nav">
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="index.html" target="mainFrame">首页</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="content.html" target="mainFrame">项目一览</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">新闻资讯</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">文件分享</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">关于我们</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">联系我们</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="index.html" target="main">首页</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="content.html" target="main">项目一览</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">新闻资讯</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">文件分享</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">关于我们</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">联系我们</a></li>
 							</ul>
 					</nav>
         </div>
@@ -66,12 +66,12 @@
 					THESLab
 				</span>
     		<nav class="mdl-navigation">
-      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="index.html" target="mainFrame">首页</a>
-      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="content.html" target="mainFrame">项目一览</a>
-      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">新闻资讯</a>
-      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">文件分享</a>
-      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">关于我们</a>
-      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="mainFrame">联系我们</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="index.html" target="main">首页</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="content.html" target="main">项目一览</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="main">新闻资讯</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="main">文件分享</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="main">关于我们</a>
+      		<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="#" target="main">联系我们</a>
     		</nav>
   		</div>
 
@@ -80,10 +80,10 @@
 					<nav class="navbar navbar-default">
 						<div class="col-sm-6 col-md-5 col-lg-4 col-sm-offset-1 col-md-offset-1 col-lg-offset-2">
 							<ul class="nav navbar-nav">
-								<li><a href="index.html" target="mainFrame">首页</a></li>
-								<li><a href="content.html" target="mainFrame">项目一览</a></li>
-								<li><a href="#" target="mainFrame">关于我们</a></li>
-								<li><a href="#" target="mainFrame">联系我们</a></li>
+								<li><a href="index.html" target="main">首页</a></li>
+								<li><a href="content.html" target="main">项目一览</a></li>
+								<li><a href="#" target="main">关于我们</a></li>
+								<li><a href="#" target="main">联系我们</a></li>
 							</ul>
 						</div>
 
