--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 	</head>
 
 	<frameset rows="64,*" frameborder="no" border="0" id="frameSet">
-		<frame src="top.html" name="topFrame" scrolling="no" noresize="noresize" id="topFrame" title="topFrame" />
-		<frame src="index.html" name="mainFrame" scrolling="auto" id="mainFrame" title="mainFrame" />
+		<frame src="top.html" name="top" scrolling="no" noresize="noresize" id="topFrame" title="topFrame" />
+		<frame src="index.html" name="main" scrolling="auto" id="mainFrame" title="mainFrame" />
 	</frameset>
 
 	<noframes>
