--- a/page.html
+++ b/page.html
@@ -31,10 +31,10 @@
 			<nav class="navbar navbar-default">
 				<div class="col-sm-6 col-md-5 col-lg-4 col-sm-offset-1 col-md-offset-1 col-lg-offset-2">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html" target="mainFrame">首页</a></li>
-						<li><a href="content.html" target="mainFrame">项目一览</a></li>
-						<li><a href="#" target="mainFrame">关于我们</a></li>
-						<li><a href="#" target="mainFrame">联系我们</a></li>
+						<li><a href="index.html" target="main">首页</a></li>
+						<li><a href="content.html" target="main">项目一览</a></li>
+						<li><a href="#" target="main">关于我们</a></li>
+						<li><a href="#" target="main">联系我们</a></li>
 					</ul>
 				</div>
 
