--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
 		<div class="box">
 			<h1>清华大学附属中学能量系统实验室</h1>
 			<h1>THESLab</h1>
-			<h2>Reduce, Recyle, Reuse</h2>
+			<h2>In&nbsp;EFFICIENCY&nbsp;We&nbsp;Believe</h2>
 			<a href="main.html">
 				<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">See Our Work</button>
 			</a>
