--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>首页 - THESLab</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/homepage.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/material.min.css">
@@ -18,7 +19,7 @@
 		<div class="box">
 			<h1>清华大学附属中学能量系统实验室</h1>
 			<h2>Greetings, Welcome to THESLab!</h2>
-			<h3>In&nbsp;EFFICIENCY&nbsp;We&nbsp;Believe</h3>
+			<h3>In&nbsp;Efficiency&nbsp;We&nbsp;Believe</h3>
 			<a href="main.html">
 				<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">See Our Work</button>
 			</a>
