--- a/content.html
+++ b/content.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>项目一览 - THESLab</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
