--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>THESLab</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/material.min.css">
