--- a/top.html
+++ b/top.html
@@ -2,14 +2,15 @@
 
 <html>
 	<head>
+		<title>top</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/top.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/material.min.css">
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/material.min.js"></script>
-		<title>top</title>
 	</head>
 
 	<body>
