--- a/top.html
+++ b/top.html
@@ -28,8 +28,8 @@
 							<ul class="nav navbar-nav">
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="index.html" target="main">首页</a></li>
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="content.html" target="main">项目一览</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">新闻资讯</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">文件分享</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="news.html" target="main">新闻资讯</a></li>
+								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="document.html" target="main">文件分享</a></li>
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">关于我们</a></li>
 								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">联系我们</a></li>
 							</ul>
