<news> & <document> almost finished

--- a/content.html
+++ b/content.html
@@ -14,7 +14,7 @@
 		<script type="text/javascript" src="js/material.min.js"></script>
 	</head>
 
-	<body style="margin-top:50px">
+	<body>
 		<div class="fixed-menu-button">
 			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="fixed-menu-button">
   			<i class="material-icons">add</i>
