--- a/news@20151215-1.html
+++ b/news@20151215-1.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>新闻资讯 - THESLab</title>
+		<title>news@20151214</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -28,47 +28,21 @@
   		<li class="mdl-menu__item">Yet Another Action</li>
 		</ul>
 
-		<div class="news-index row">
-			<div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
-				<div class="panel-group" id="accordion">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h4 class="panel-title">
-								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-									实验室活动预告：填写材料购买清单，完成项目Pre-Proposal $Vertex @Dec.15,2015
-								</a>
-								<a href="news@20151215-1.html" target="main">
-									<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
-								</a>
-							</h4>
-						</div>
-						<div id="collapseOne" class="panel-collapse collapse in">
-							<div class="panel-body">
-									<p>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h4 class="panel-title">
-								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-									实验室材料购买清单模板发布 $Vertex @Dec.14,2015
-								</a>
-								<a href="news@20151214-1.html" target="main">
-									<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
-								</a>
-							</h4>
-						</div>
-						<div id="collapseTwo" class="panel-collapse collapse">
-							<div class="panel-body">
-  							<p>请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师。</p>
-							</div>
-						</div>
-					</div>
-				</div>
+		<div class="news row" style="margin-bottom:25px">
+      <div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
+			</div>
+			<div class="col-sm-8 col-md-6 col-lg-5">
+				<h1>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal</h1>
+				<h2>$Vertex @Dec.15,2015</h2>
 			</div>
 		</div>
+
+    <div class="news row">
+      <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+        <p>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal。</p>
+      </div>
+    </div>
+
 
 		<div class="bottom row" style="margin-top:40px">
 			<nav class="navbar navbar-default">
