--- a/document.html
+++ b/document.html
@@ -22,14 +22,15 @@
 		</div>
 
 		<ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" for="fixed-menu-button">
-  		<li class="mdl-menu__item">Some Action</li>
-  		<li class="mdl-menu__item">Another Action</li>
-  		<li disabled class="mdl-menu__item">Disabled Action</li>
-  		<li class="mdl-menu__item">Yet Another Action</li>
+  		<a href="#mb"><li class="mdl-menu__item">模版</li></a>
+  		<a href="#rr"><li class="mdl-menu__item">研究日志</li></a>
+  		<a href="#re"><li class="mdl-menu__item">报告</li></a>
+  		<a href="#pa"><li disabled class="mdl-menu__item">论文</li></a>
 		</ul>
 
     <div class="row">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+				<a name="mb"></a>
         <h1>模板</h1>
         <p><a href="doc/模板/能量系统实验室项目采购清单-模板.xlsx">能量系统实验室项目采购清单</a></p>
       </div>
@@ -37,6 +38,7 @@
 
     <div class="row">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+				<a name="rr"></a>
         <h1>研究日志</h1>
         <p><a href="doc/研究日志/研究日志 G151303陈金昕.docx">20151031 $CJX</a></p>
         <p><a href="doc/研究日志/RESEARCHRECORD.zip">20151022 $Vertex</a></p>
@@ -48,6 +50,7 @@
 
     <div class="row">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+				<a name="re"></a>
         <h1>报告</h1>
         <p><a href="doc/报告/无尽装备能源系统--波浪能枢轴发电.doc">波浪能枢轴发电 $无尽ZB能源</a></p>
         <p><a href="doc/报告/温差发电技术的应用.docx">温差发电技术的应用 $Thermoelectric</a></p>
