--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/material.min.css">
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
@@ -28,6 +29,22 @@
   		<li disabled class="mdl-menu__item">Disabled Action</li>
   		<li class="mdl-menu__item">Yet Another Action</li>
 		</ul>
+
+		<div class="row">
+			<div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
+			</div>
+
+			<div class="col-sm-8 vol-md-6 col-lg-5">
+				<p>
+					<br />清华附中能量系统实验室于2015年9月正式成立，实验室的宗旨是将能源的使用效率最大化。清华附中能量系统实验室目前只对于清华附中高中部高一高二同学招生，经过重重选拔，这里集结了优秀学生中的翘楚。他们有思想，敢创新。
+					<br /><br />目前能量系统实验室拥有四个项目。
+					<br /><br />THERMOELECTRIC项目致力于改变现有人类对于热力发电的应用，使用热力发电材料直接热力发电，去除普通热力发电能量转化中的机械损耗。
+					<br /><br />无尽装备能源系统项目致力于将现实生活中人体周围耗散的或难以被直接利用的能源加以使用，比如太阳能、人体耗散的热能、人体运动时被浪费的势能等。
+					<br /><br />硅纳米电池项目致力于使用与碳有类似性质的硅作为电池原料，极大程度扩大现有电池单位体积容量。
+					<br /><br />NV色心项目致力于将对量子能进行有效应用，发展量子通讯、精密物理量测量等技术。
+				</p>
+			</div>
+		</div>
 
 		<div class="bottom row" style="margin-top:40px">
 			<nav class="navbar navbar-default">
