many things added

--- a/content.html
+++ b/content.html
@@ -38,10 +38,10 @@
     						<h2 class="mdl-card__title-text">Thermoelectric</h2>
   						</div>
   						<div class="mdl-card__supporting-text">
-								Add Descriptions
+								应用Seeback效应，温差能直接转化为电能，轻便易应用在生活中。
   						</div>
   						<div class="mdl-card__actions mdl-card--border">
-    						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="#" target="main">
+    						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="thermoelectric_intro.html" target="main">
       						Get Started
     						</a>
   						</div>
@@ -58,7 +58,7 @@
     						<h2 class="mdl-card__title-text">无尽ZB能源</h2>
   						</div>
   						<div class="mdl-card__supporting-text">
-								Add Descriptions
+								独特磁流体发电偏心轮配重与高效率低转速发电机产生强大功率，依靠人行走的腿部波浪能发电，4小时4000毫安时。
   						</div>
   						<div class="mdl-card__actions mdl-card--border">
     						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="infinitezb_intro.html" target="main">
@@ -79,7 +79,7 @@
     						<h2 class="mdl-card__title-text">NV色心</h2>
   						</div>
   						<div class="mdl-card__supporting-text">
-								Add Descriptions
+								高生物相容性，高光学稳定性，纳米量级距离的测量，有很大潜力的量子计算机系统。
   						</div>
   						<div class="mdl-card__actions mdl-card--border">
     						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="nvcenter_intro.html" target="main">
@@ -96,13 +96,14 @@
 					<div class="md-dp-2-top md-dp-6-rised-top">
 						<div class="mdl-card" style="width:100%">
   						<div class="mdl-card__title">
-    						<h2 class="mdl-card__title-text">Welcome</h2>
+								<img src="img/sinano.jpg" />
+    						<h2 class="mdl-card__title-text">硅纳米电池</h2>
   						</div>
   						<div class="mdl-card__supporting-text">
-								Add Descriptions
+								在目前研究的各种合金中理论容量最高理论容量达4200mAh/g的蓄电池。
   						</div>
   						<div class="mdl-card__actions mdl-card--border">
-    						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="#" target="main">
+    						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="sinano_intro.html" target="main">
       						Get Started
     						</a>
   						</div>
