--- a/news@20151215-1.html
+++ b/news@20151215-1.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>news@20151214</title>
+		<title>news@20151215-1</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -30,6 +30,10 @@
 
 		<div class="news row" style="margin-bottom:25px">
       <div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
+				<img src="img/LOGO-W.jpg" usemap="#Map" />
+				<map name="Map" id="Map">
+					<area shape="rect" coords="0,0,1000,1000" href="homepage.html">
+				</map>
 			</div>
 			<div class="col-sm-8 col-md-6 col-lg-5">
 				<h1>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal</h1>
