--- a/document.html
+++ b/document.html
@@ -14,7 +14,7 @@
 		<script type="text/javascript" src="js/material.min.js"></script>
 	</head>
 
-	<body>
+	<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div class="fixed-menu-button">
 			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="fixed-menu-button">
   			<i class="material-icons">add</i>
@@ -28,7 +28,20 @@
   		<a href="#pa"><li disabled class="mdl-menu__item">论文</li></a>
 		</ul>
 
-    <div class="row">
+		<div class="scrollspy">
+			<nav class="navbar navbar-default">
+				<ul class="nav navbar-nav">
+					<hr />
+					<li><a href="#mb">模版</a></li>
+					<br />
+					<li><a href="#rr">研究日志</a></li>
+					<br />
+					<li><a href="#re">报告</a></li>
+				</ul>
+			</nav>
+		</div>
+
+    <div class="row" id="mb">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
 				<a name="mb"></a>
         <h1>模板</h1>
@@ -36,7 +49,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="rr">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
 				<a name="rr"></a>
         <h1>研究日志</h1>
@@ -48,7 +61,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="re">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
 				<a name="re"></a>
         <h1>报告</h1>
@@ -56,6 +69,8 @@
         <p><a href="doc/报告/温差发电技术的应用.docx">温差发电技术的应用 $Thermoelectric</a></p>
       </div>
     </div>
+
+		<div style="margin:1000px"></div>
 
 		<div class="bottom row" style="margin-top:40px">
 			<nav class="navbar navbar-default">
