--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 
 		<div class="row">
 			<div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
+				<br />
+				<div class="md-dp-2-front">
+					<div class="md-dp-2-top">
+						<p class="card" align="center">清华大学附属中学能量系统实验室<br />THESLab</p>
+					</div>
+				</div>
+				<hr />
+				<img src="img/LOGO-W.jpg" />
 			</div>
 
 			<div class="col-sm-8 vol-md-6 col-lg-5">
