--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</button>
 		</div>
 
-		<ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" for="fixed-menu-button">
+		<ul class="md-dp-2-top mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" for="fixed-menu-button">
   		<li class="mdl-menu__item">Some Action</li>
   		<li class="mdl-menu__item">Another Action</li>
   		<li disabled class="mdl-menu__item">Disabled Action</li>
@@ -35,7 +35,10 @@
 				<br />
 				<div class="md-dp-2-front">
 					<div class="md-dp-2-top">
-						<p class="card" align="center">清华大学附属中学能量系统实验室<br />THESLab</p>
+						<p class="card" align="center">
+							清华大学附属中学能量系统实验室<br />
+							<font style="color:#ff4081">THESLab</font>
+						</p>
 					</div>
 				</div>
 				<hr />
