--- a/thermoelectric_intro.html
+++ b/thermoelectric_intro.html
@@ -17,11 +17,11 @@
 .STYLE5 {
 	font-family: "Microsoft YaHei";
 	font-size: 16pt;
-	color: #CC0000;
+	color: #ff4081;
 }
 .STYLE6 {color: #000000}
 .STYLE7 {font-family: "Microsoft YaHei"; font-size: 12pt; color: #000000; }
-.STYLE8 {font-family: "Microsoft YaHei"; font-size: 16pt; color: #CC0000; font-weight: bold; }
+.STYLE8 {font-family: "Microsoft YaHei"; font-size: 16pt; color: #ff4081; font-weight: bold; }
 -->
 
 </style>
@@ -80,7 +80,7 @@
       ~ 体温与气温 <br />
       ~ 煮沸的热水所含有的热能 </span><br />
       ~ 电脑的散热 <br />
-      ~? …… </p>
+      ~ …… </p>
     <p><span class="STYLE2">（传统的火力发电并非我们所指的“热电”） <br />
     </span>    </p></td>
   </tr>
