--- a/sinano_intro.html
+++ b/sinano_intro.html
@@ -17,9 +17,9 @@
 .STYLE5 {
 	font-family: "Microsoft YaHei";
 	font-size: 16pt;
-	color: #CC0000;
+	color: #ff4081;
 }
-.STYLE6 {font-family: "Microsoft YaHei"; font-size: 16pt; color: #CC0000; font-weight: bold; }
+.STYLE6 {font-family: "Microsoft YaHei"; font-size: 16pt; color: #ff4081; font-weight: bold; }
 -->
 </style>
 <link rel="stylesheet" href="css/font.css">
