--- a/infinitezb_intro.html
+++ b/infinitezb_intro.html
@@ -5,6 +5,9 @@
 <title>无尽装备能源系统</title>
 <style type="text/css">
 <!--
+img {
+	padding: 25px;
+}
 .STYLE1 {
 	font-size: 12pt;
 	font-family: "Microsoft YaHei";
