--- a/news.html
+++ b/news.html
@@ -31,45 +31,60 @@
 				<div class="panel-group" id="accordion">
 
 					<a name="201512"></a>
-					<div class="md-dp-2-front md-dp-6-rised-front">
-						<div class="panel panel-default md-dp-2-top md-dp-6-rised-top">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-										实验室活动预告：填写材料购买清单，完成项目Pre-Proposal $Vertex @Dec.15,2015
-									</a>
-									<a href="news@20151215-1.html" target="main">
-										<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
-									</a>
-								</h4>
-							</div>
-							<div id="collapseOne" class="panel-collapse collapse in">
-								<div class="panel-body">
-										<p>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal</p>
-								</div>
+					<div class="panel panel-default md-dp-2 md-dp-6-rised">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+									实验室活动预告：完成arduino项目的制作 $Vertex @Dec.26,2015
+								</a>
+								<a href="news@20151214-1.html" target="main">
+									<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
+								</a>
+							</h4>
+						</div>
+						<div id="collapseOne" class="panel-collapse collapse">
+							<div class="panel-body">
+								<p>实验室活动预告：完成arduino项目的制作</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="md-dp-2-front md-dp-6-rised-front">
-						<div class="panel panel-default md-dp-2-top md-dp-6-rised-top">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-										实验室材料购买清单模板发布 $Vertex @Dec.14,2015
-									</a>
-									<a href="news@20151214-1.html" target="main">
-										<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
-									</a>
-								</h4>
-							</div>
-							<div id="collapseTwo" class="panel-collapse collapse">
-								<div class="panel-body">
-									<p>请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师。</p>
-								</div>
+					<div class="panel panel-default md-dp-2 md-dp-6-rised">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+									实验室活动预告：填写材料购买清单，完成项目Pre-Proposal $Vertex @Dec.15,2015
+								</a>
+								<a href="news@20151215-1.html" target="main">
+									<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
+								</a>
+							</h4>
+						</div>
+						<div id="collapseTwo" class="panel-collapse collapse">
+							<div class="panel-body">
+								<p>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal</p>
 							</div>
 						</div>
 					</div>
+
+					<div class="panel panel-default md-dp-2 md-dp-6-rised">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+									实验室材料购买清单模板发布 $Vertex @Dec.14,2015
+								</a>
+								<a href="news@20151214-1.html" target="main">
+									<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
+								</a>
+							</h4>
+						</div>
+						<div id="collapseThree" class="panel-collapse collapse">
+							<div class="panel-body">
+							<p>请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师</p>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
