--- a/news@20151226-1.html
+++ b/news@20151226-1.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>news@20151215-1</title>
+		<title>news@20151214-1</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/font.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -30,20 +30,20 @@
 
 		<div class="news row" style="margin-bottom:25px">
       <div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
-				<img src="img/LOGO-W.jpg" />
+				<img src="img/LOGO-W.jpg" /> 
 			</div>
 			<div class="col-sm-8 col-md-6 col-lg-5">
-				<h1>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal</h1>
-				<h2>$Vertex @Dec.15,2015</h2>
+				<h1>实验室活动预告：完成arduino项目的制作 $Vertex @Dec.26,2015</h1>
+				<h2>$Vertex @Dec.26,2015</h2>
 			</div>
 		</div>
 
     <div class="news row">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
-        <p>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal。</p>
+				<p>实验室活动预告：完成arduino项目的制作</p>
+				<p>要求：使用热电／压电等传感，做一个有趣的杯垫</p>
       </div>
     </div>
-
 
 		<div class="bottom row" style="margin-top:40px">
 			<nav class="navbar navbar-default">
