--- a/sinano_intro.html
+++ b/sinano_intro.html
@@ -5,6 +5,9 @@
 <title>╧Хдицв╧э╣ГЁь</title>
 <style type="text/css">
 <!--
+img {
+	padding: 25px;
+}
 .STYLE2 {
 	font-family: "Microsoft YaHei";
 	font-size: 12pt;
