--- a/index.html
+++ b/index.html
@@ -33,19 +33,20 @@
 		<div class="row">
 			<div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
 				<br />
-				<div class="md-dp-2-front">
-					<div class="md-dp-2-top">
-						<p class="card" align="center">
-							清华大学附属中学能量系统实验室<br />
-							<font style="color:#ff4081">THESLab</font>
-						</p>
-					</div>
+				<div class="md-dp-2">
+					<p class="card" align="center">
+						清华大学附属中学能量系统实验室<br />
+						<font style="color:#ff4081">THESLab</font>
+					</p>
 				</div>
 				<hr />
-				<img src="img/LOGO-W.jpg" />
+				<img src="img/LOGO-W.jpg" usemap="#Map" />
+				<map name="Map" id="Map">
+					<area shape="rect" coords="0,0,1000,1000" href="homepage.html" target="_parent">
+				</map>
 			</div>
 
-			<div class="col-sm-8 vol-md-6 col-lg-5">
+			<div class="col-sm-8 col-md-6 col-lg-5" style="margin-bottom:30px">
 				<p>
 					<br />清华附中能量系统实验室于2015年9月正式成立，实验室的宗旨是将能源的使用效率最大化。清华附中能量系统实验室目前只对于清华附中高中部高一高二同学招生，经过重重选拔，这里集结了优秀学生中的翘楚。他们有思想，敢创新。
 					<br /><br />目前能量系统实验室拥有四个项目。
