--- a/news@20151214-1.html
+++ b/news@20151214-1.html
@@ -30,10 +30,7 @@
 
 		<div class="news row" style="margin-bottom:25px">
       <div class="col-sm-4 col-md-4 col-lg-3 col-md-offset-1 col-lg-offset-2">
-				<img src="img/LOGO-W.jpg" usemap="#Map" />
-				<map name="Map" id="Map">
-					<area shape="rect" coords="0,0,1000,1000" href="homepage.html" target="_parent">
-				</map>
+				<img src="img/LOGO-W.jpg" /> 
 			</div>
 			<div class="col-sm-8 col-md-6 col-lg-5">
 				<h1>实验室材料购买清单模板发布</h1>
