--- a/top.html
+++ b/top.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-		<div class="mdl-layout mdl-js-layout">
+		<div class="mdl-layout mdl-js-layout md-dp-2">
 			<header class="mdl-layout__header">
 				<div class="mdl-layout__header-row top">
 					<span class="mdl-layout-title">
@@ -26,15 +26,15 @@
 					<div class="mdl-layout-spacer"></div>
 					<nav class="navbar navbar-default">
 							<ul class="nav navbar-nav">
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="index.html" target="main">首页</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="content.html" target="main">项目一览</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="news.html" target="main">新闻资讯</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="document.html" target="main">文件分享</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">关于我们</a></li>
-								<li class="md-dp-2-rised-front"><a class="selector md-dp-2-rised-top mdl-js-button mdl-js-ripple-effect" href="#" target="main">联系我们</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="index.html" target="main">首页</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="content.html" target="main">项目一览</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="news.html" target="main">新闻资讯</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="document.html" target="main">文件分享</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="#" target="main">关于我们</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="#" target="main">联系我们</a></li>
 							</ul>
 						</nav>
-    		</div>
+				</div>
 			</header>
 		</div>
 	</body>
