many things added

--- a/about_us.html
+++ b/about_us.html
@@ -15,6 +15,8 @@
 	</head>
 
 	<body>
+		<bgsound src="music/bgsound.mp3" loop="-1" volume="1" delay="0" />
+
 		<div class="fixed-menu-button">
 			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored md-dp-6" id="fixed-menu-button">
   			<i class="material-icons">add</i>
