--- a/content.html
+++ b/content.html
@@ -16,16 +16,16 @@
 
 	<body>
 		<div class="fixed-menu-button">
-			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="fixed-menu-button">
+			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored md-dp-6" id="fixed-menu-button">
   			<i class="material-icons">add</i>
 			</button>
 		</div>
 
-		<ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" for="fixed-menu-button">
-  		<li class="mdl-menu__item">Some Action</li>
-  		<li class="mdl-menu__item">Another Action</li>
-  		<li disabled class="mdl-menu__item">Disabled Action</li>
-  		<li class="mdl-menu__item">Yet Another Action</li>
+		<ul class="md-dp-2-top mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" for="fixed-menu-button">
+  		<a href="thermoelectric_intro.html" target="main"><li class="mdl-menu__item">Thermoelectric</li></a>
+  		<a href="infinitezb_intro.html" target="main"><li class="mdl-menu__item">无尽ZB能源</li></a>
+  		<a href="nvcenter_intro.html" target="main"><li class="mdl-menu__item">NV色心</li></a>
+  		<a href="sinano_intro.html" target="main"><li class="mdl-menu__item">硅纳米电池</li></a>
 		</ul>
 
 		<div class="row">
@@ -111,8 +111,8 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html" target="main">首页</a></li>
 						<li><a href="content.html" target="main">项目一览</a></li>
-						<li><a href="#" target="main">关于我们</a></li>
-						<li><a href="#" target="main">联系我们</a></li>
+						<li><a href="about_us.html" target="main">关于我们</a></li>
+						<li><a href="contact_us.html" target="main">联系我们</a></li>
 					</ul>
 				</div>
 
