--- a/document.html
+++ b/document.html
@@ -16,7 +16,7 @@
 
 	<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div class="fixed-menu-button">
-			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="fixed-menu-button">
+			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored md-dp-6" id="fixed-menu-button">
   			<i class="material-icons">add</i>
 			</button>
 		</div>
@@ -26,6 +26,7 @@
   		<a href="#rr"><li class="mdl-menu__item">研究日志</li></a>
   		<a href="#re"><li class="mdl-menu__item">报告</li></a>
   		<a href="#pa"><li disabled class="mdl-menu__item">论文</li></a>
+  		<a href="#gd"><li class="mdl-menu__item">归档文件</li></a>
 		</ul>
 
 		<div class="scrollspy">
@@ -37,6 +38,8 @@
 					<li><a href="#rr">研究日志</a></li>
 					<br />
 					<li><a href="#re">报告</a></li>
+					<br />
+					<li><a href="#gd">归档文件</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -70,6 +73,14 @@
       </div>
     </div>
 
+		<div class="row" id="gd">
+			<div class="rol-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+				<a name="gd"></a>
+				<h1>归档文件</h1>
+				<p><a href="doc/归档/第一期材料清单.zip">第一期材料清单</a></p>
+			</div>
+		</div>
+
 		<div style="margin:1000px"></div>
 
 		<div class="bottom row" style="margin-top:40px">
@@ -78,8 +89,8 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html" target="main">首页</a></li>
 						<li><a href="content.html" target="main">项目一览</a></li>
-						<li><a href="#" target="main">关于我们</a></li>
-						<li><a href="#" target="main">联系我们</a></li>
+						<li><a href="about_us.html" target="main">关于我们</a></li>
+						<li><a href="contact_us.html" target="main">联系我们</a></li>
 					</ul>
 				</div>
 
