--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body class="homepage">
-		<bgsound src="music/bgsound.mp3" loop="-1" volume="1" delay="0" />
+		<bgsound src="music/bgsound.wav" loop="-1" volume="1" delay="0" />
 
 		<div class="box">
 			<h1>清华大学附属中学能量系统实验室</h1>
