--- a/news@20151231-1.html
+++ b/news@20151231-1.html
@@ -20,15 +20,15 @@
 				<img src="img/LOGO-W.jpg" /> 
 			</div>
 			<div class="col-sm-8 col-md-6 col-lg-5">
-				<h1>实验室活动预告：完成arduino项目的制作 $Vertex @Dec.26,2015</h1>
-				<h2>$Vertex @Dec.26,2015</h2>
+				<h1>实验室第一期材料购买清单已经提交</h1>
+				<h2>$Vertex @Dec.14,2015</h2>
 			</div>
 		</div>
 
     <div class="news row">
       <div class="col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
-				<p>实验室活动预告：完成arduino项目的制作</p>
-				<p>要求：使用热电／压电等传感，做一个有趣的杯垫</p>
+			<p>实验室第一期材料购买清单已在12月30日由邱楠老师提交给学校</p>
+			<p>第一期材料清单下载：<a href="doc/归档/第一期材料清单.zip">第一期材料清单.zip</a></p>
       </div>
     </div>
 
