--- a/top.html
+++ b/top.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-		<div class="mdl-layout mdl-js-layout md-dp-2">
+		<div class="mdl-layout mdl-js-layout md-dp-4">
 			<header class="mdl-layout__header">
 				<div class="mdl-layout__header-row top">
 					<span class="mdl-layout-title">
@@ -30,8 +30,8 @@
 								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="content.html" target="main">项目一览</a></li>
 								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="news.html" target="main">新闻资讯</a></li>
 								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="document.html" target="main">文件分享</a></li>
-								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="#" target="main">关于我们</a></li>
-								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="#" target="main">联系我们</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="about_us.html" target="main">关于我们</a></li>
+								<li><a class="selector md-dp-4-rised mdl-js-button mdl-js-ripple-effect" href="contact_us.html" target="main">联系我们</a></li>
 							</ul>
 						</nav>
 				</div>
