--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<div class="fixed-menu-button">
-			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="fixed-menu-button">
+			<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored md-dp-6" id="fixed-menu-button">
   			<i class="material-icons">add</i>
 			</button>
 		</div>
@@ -34,7 +34,25 @@
 					<div class="panel panel-default md-dp-2 md-dp-6-rised">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+									实验室第一期材料购买清单已经提交 $Vertex @Dec.31,2015
+								</a>
+								<a href="news@20151231-1.html" target="main">
+									<button class="mdl-button mdl-js-button mdl-js-ripple-effect">more info.</button>
+								</a>
+							</h4>
+						</div>
+						<div id="collapseFour" class="panel-collapse collapse">
+							<div class="panel-body">
+								<p>实验室第一期材料购买清单已在12月30日由邱楠老师提交给学校</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="panel panel-default md-dp-2 md-dp-6-rised">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
 									实验室活动预告：完成arduino项目的制作 $Vertex @Dec.26,2015
 								</a>
 								<a href="news@20151214-1.html" target="main">
@@ -42,7 +60,7 @@
 								</a>
 							</h4>
 						</div>
-						<div id="collapseOne" class="panel-collapse collapse">
+						<div id="collapseThree" class="panel-collapse collapse">
 							<div class="panel-body">
 								<p>实验室活动预告：完成arduino项目的制作</p>
 							</div>
@@ -70,7 +88,7 @@
 					<div class="panel panel-default md-dp-2 md-dp-6-rised">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+								<a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
 									实验室材料购买清单模板发布 $Vertex @Dec.14,2015
 								</a>
 								<a href="news@20151214-1.html" target="main">
@@ -78,13 +96,13 @@
 								</a>
 							</h4>
 						</div>
-						<div id="collapseThree" class="panel-collapse collapse">
+						<div id="collapseOne" class="panel-collapse collapse">
 							<div class="panel-body">
 							<p>请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师</p>
 							</div>
 						</div>
 					</div>
-
+	
 				</div>
 			</div>
 		</div>
@@ -95,8 +113,8 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html" target="main">首页</a></li>
 						<li><a href="content.html" target="main">项目一览</a></li>
-						<li><a href="#" target="main">关于我们</a></li>
-						<li><a href="#" target="main">联系我们</a></li>
+						<li><a href="about_us.html" target="main">关于我们</a></li>
+						<li><a href="contact_us.html" target="main">联系我们</a></li>
 					</ul>
 				</div>
 
