--- a/sinano_intro.html
+++ b/sinano_intro.html
@@ -84,10 +84,10 @@ img {
 			<nav class="navbar navbar-default">
 				<div class="col-sm-6 col-md-5 col-lg-4 col-sm-offset-1 col-md-offset-1 col-lg-offset-2">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html" target="main">首页</a></li>
+						<li><a href="main.html" target="main">首页</a></li>
 						<li><a href="content.html" target="main">项目一览</a></li>
-						<li><a href="#" target="main">关于我们</a></li>
-						<li><a href="#" target="main">联系我们</a></li>
+						<li><a href="about_us.html" target="main">关于我们</a></li>
+						<li><a href="contact_us.html" target="main">联系我们</a></li>
 					</ul>
 				</div>
 
